force-app/main/default/objects/KYC_NB__c/KYC_NB__c.object-meta.xml
<CustomObject>
    <label>National KYC</label>
    <nameField>
        <displayFormat>NB{0}</displayFormat>
        <label>KYC Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>National KYCs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>