force-app/main/default/objects/KYC_NB__c/fields/Address__c.field-meta.xml
<CustomField>
    <fullName>Address__c</fullName>
    <inlineHelpText>Name of the main address street</inlineHelpText>
    <label>Address</label>
    <type>TextArea</type>
</CustomField>