force-app/main/default/objects/KYC_NB__c/fields/Adm_Address__c.field-meta.xml
<CustomField>
    <fullName>Adm_Address__c</fullName>
    <inlineHelpText>Street name of the administrative address. (Optional)</inlineHelpText>
    <label>Administrative Address</label>
    <type>TextArea</type>
</CustomField>