force-app/main/default/objects/KYC_NB__c/fields/Adm_City__c.field-meta.xml
<CustomField>
    <fullName>Adm_City__c</fullName>
    <inlineHelpText>Administrative address city. (Optional)</inlineHelpText>
    <label>Administrative City</label>
    <type>TextArea</type>
</CustomField>