force-app/main/default/objects/KYC_NB__c/fields/Adm_Country__c.field-meta.xml
<CustomField>
    <fullName>Adm_Country__c</fullName>
    <inlineHelpText>Administrative address country. (Optional)</inlineHelpText>
    <label>Administrative Country</label>
    <type>TextArea</type>
</CustomField>