force-app/main/default/objects/KYC_NB__c/fields/Adm_Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Adm_Postal_Code__c</fullName>
    <inlineHelpText>Administrative address ZIP code. (Optional)</inlineHelpText>
    <label>Administrative Postal Code</label>
    <type>TextArea</type>
</CustomField>