force-app/main/default/objects/KYC_NB__c/fields/Adm_State__c.field-meta.xml
<CustomField>
    <fullName>Adm_State__c</fullName>
    <inlineHelpText>Administrative address state. (Optional)</inlineHelpText>
    <label>Administrative State</label>
    <type>TextArea</type>
</CustomField>