force-app/main/default/objects/KYC_NB__c/fields/Adm_Street_Number__c.field-meta.xml
<CustomField>
    <fullName>Adm_Street_Number__c</fullName>
    <inlineHelpText>Administrative address street number. (Optional)</inlineHelpText>
    <label>Administrative Street Number</label>
    <type>TextArea</type>
</CustomField>