force-app/main/default/objects/KYC_NB__c/fields/Bank_Account__c.field-meta.xml
<CustomField>
    <fullName>Bank_Account__c</fullName>
    <inlineHelpText>Bank account number.</inlineHelpText>
    <label>Bank Account</label>
    <type>TextArea</type>
</CustomField>