force-app/main/default/objects/KYC_NB__c/fields/Bank_Agency__c.field-meta.xml
<CustomField>
    <fullName>Bank_Agency__c</fullName>
    <inlineHelpText>Bank account branch.</inlineHelpText>
    <label>Bank Agency</label>
    <type>TextArea</type>
</CustomField>