force-app/main/default/objects/KYC_NB__c/fields/Bank_Name__c.field-meta.xml
<CustomField>
    <fullName>Bank_Name__c</fullName>
    <inlineHelpText>Name of the bank where the customer has an account.</inlineHelpText>
    <label>Bank Name</label>
    <type>TextArea</type>
</CustomField>