force-app/main/default/objects/KYC_NB__c/fields/Bank_Number__c.field-meta.xml
<CustomField>
    <fullName>Bank_Number__c</fullName>
    <inlineHelpText>ISPB of the bank where the customer has an account.</inlineHelpText>
    <label>Bank Number</label>
    <type>TextArea</type>
</CustomField>