force-app/main/default/objects/KYC_NB__c/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <inlineHelpText>Main address city.</inlineHelpText>
    <label>City</label>
    <type>TextArea</type>
</CustomField>