force-app/main/default/objects/KYC_NB__c/fields/Client_Account__c.field-meta.xml
<CustomField>
    <fullName>Client_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Account related to the KYC.</inlineHelpText>
    <label>Client Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>National KYCs</relationshipLabel>
    <relationshipName>National_KYCs</relationshipName>
    <type>Lookup</type>
</CustomField>