force-app/main/default/objects/KYC_NB__c/fields/Company_Type__c.field-meta.xml
<CustomField>
    <fullName>Company_Type__c</fullName>
    <inlineHelpText>Type of company (LLC, Corporation, etc.).</inlineHelpText>
    <label>Company Type</label>
    <type>TextArea</type>
</CustomField>