force-app/main/default/objects/KYC_NB__c/fields/Company_URL__c.field-meta.xml
<CustomField>
    <fullName>Company_URL__c</fullName>
    <inlineHelpText>Internal company website (Does not count as a market link).</inlineHelpText>
    <label>Company URL</label>
    <type>Url</type>
</CustomField>