force-app/main/default/objects/KYC_NB__c/fields/Complement__c.field-meta.xml
<CustomField>
    <fullName>Complement__c</fullName>
    <inlineHelpText>Main address complement. (Optional)</inlineHelpText>
    <label>Complement</label>
    <type>TextArea</type>
</CustomField>