force-app/main/default/objects/KYC_NB__c/fields/Conformity__c.field-meta.xml
<CustomField>
    <fullName>Conformity__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is it compliant according to the type of integration? Some integrations require an extra document to be compliant</inlineHelpText>
    <label>Conformity</label>
    <type>Checkbox</type>
</CustomField>