force-app/main/default/objects/KYC_NB__c/fields/Corporate_Group__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Group__c</fullName>
    <defaultValue>false</defaultValue>
    <inlineHelpText>Is the company part of a corporate group?</inlineHelpText>
    <label>Corporate Group</label>
    <type>Checkbox</type>
</CustomField>