force-app/main/default/objects/KYC_NB__c/fields/Corporate_Name__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Name__c</fullName>
    <inlineHelpText>Commercial group name. (Optional)</inlineHelpText>
    <label>Corporate Name</label>
    <type>TextArea</type>
</CustomField>