force-app/main/default/objects/KYC_NB__c/fields/Corporate_Registration__c.field-meta.xml
<CustomField>
    <fullName>Corporate_Registration__c</fullName>
    <inlineHelpText>Tax registration number (CNPJ) of the business group.
(Opcional)</inlineHelpText>
    <label>Corporate Registration</label>
    <type>TextArea</type>
</CustomField>