force-app/main/default/objects/KYC_NB__c/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <inlineHelpText>Main address country.</inlineHelpText>
    <label>Country</label>
    <type>TextArea</type>
</CustomField>