force-app/main/default/objects/KYC_NB__c/fields/Fiscal_Registration__c.field-meta.xml
<CustomField>
    <fullName>Fiscal_Registration__c</fullName>
    <inlineHelpText>Company CNPJ.</inlineHelpText>
    <label>Fiscal Registration</label>
    <type>TextArea</type>
</CustomField>