force-app/main/default/objects/KYC_NB__c/fields/Founding_Date__c.field-meta.xml
<CustomField>
    <fullName>Founding_Date__c</fullName>
    <inlineHelpText>Legal founding date of the company.</inlineHelpText>
    <label>Founding Date</label>
    <type>Date</type>
</CustomField>