force-app/main/default/objects/KYC_NB__c/fields/Opportunity__c.field-meta.xml
<CustomField>
    <fullName>Opportunity__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Opportunity</label>
    <referenceTo>Opportunity</referenceTo>
    <relationshipLabel>National KYCs</relationshipLabel>
    <relationshipName>NB_KYCs</relationshipName>
    <type>Lookup</type>
</CustomField>