force-app/main/default/objects/KYC_NB__c/fields/Personal_Contact__c.field-meta.xml
<CustomField>
    <fullName>Personal_Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <inlineHelpText>Contact who filled in the KYC information</inlineHelpText>
    <label>Personal Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipLabel>National KYCs</relationshipLabel>
    <relationshipName>National_KYCs</relationshipName>
    <type>Lookup</type>
</CustomField>