force-app/main/default/objects/KYC_NB__c/fields/Postal_Code__c.field-meta.xml
<CustomField>
    <fullName>Postal_Code__c</fullName>
    <inlineHelpText>Main address ZIP code.</inlineHelpText>
    <label>Postal Code</label>
    <type>TextArea</type>
</CustomField>