force-app/main/default/objects/KYC_NB__c/fields/Service_Category__c.field-meta.xml
<CustomField>
    <fullName>Service_Category__c</fullName>
    <inlineHelpText>Service and/or product category.</inlineHelpText>
    <label>Service Category</label>
    <type>TextArea</type>
</CustomField>