force-app/main/default/objects/KYC_NB__c/fields/Service_Description__c.field-meta.xml
<CustomField>
    <fullName>Service_Description__c</fullName>
    <inlineHelpText>Service and/or product description. (Optional)</inlineHelpText>
    <label>Service Description</label>
    <type>TextArea</type>
</CustomField>