force-app/main/default/objects/KYC_NB__c/fields/Service_Shipping__c.field-meta.xml
<CustomField>
    <fullName>Service_Shipping__c</fullName>
    <inlineHelpText>Average delivery time for the service and/or product.</inlineHelpText>
    <label>Service Shipping</label>
    <type>TextArea</type>
</CustomField>