force-app/main/default/objects/KYC_NB__c/fields/Stage_Number__c.field-meta.xml
<CustomField>
    <fullName>Stage_Number__c</fullName>
    <inlineHelpText>Integer value between 0 and 6, where 0 means initial stage and 6 means finalized.</inlineHelpText>
    <label>Stage Number</label>
    <precision>1</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>