force-app/main/default/objects/KYC_NB__c/fields/State__c.field-meta.xml
<CustomField>
    <fullName>State__c</fullName>
    <inlineHelpText>Main address state.</inlineHelpText>
    <label>State</label>
    <type>TextArea</type>
</CustomField>