force-app/main/default/objects/KYC_NB__c/fields/Store_URL__c.field-meta.xml
<CustomField>
    <fullName>Store_URL__c</fullName>
    <inlineHelpText>Commerce site links separated by “;”.</inlineHelpText>
    <label>Store URL</label>
    <type>TextArea</type>
</CustomField>