force-app/main/default/objects/KYC_NB__c/fields/Unique_Address__c.field-meta.xml
<CustomField>
    <fullName>Unique_Address__c</fullName>
    <defaultValue>true</defaultValue>
    <inlineHelpText>Does the company have a single address?</inlineHelpText>
    <label>Unique Address</label>
    <type>Checkbox</type>
</CustomField>