force-app/main/default/objects/KYC_NB__c/fields/Unique_Link__c.field-meta.xml
<CustomField>
    <fullName>Unique_Link__c</fullName>
    <inlineHelpText>Automatically generated unique link for form completion.</inlineHelpText>
    <label>Unique Link</label>
    <type>TextArea</type>
</CustomField>