force-app/main/default/objects/KYC_NB__c/listViews/CEO_KYC_NB.listView-meta.xml
<ListView>
    <fullName>CEO_KYC_NB</fullName>
    <filterScope>Queue</filterScope>
    <label>CEO</label>
    <queue>CEO</queue>
    <sharedTo>
        <allInternalUsers></allInternalUsers>
    </sharedTo>
</ListView>